Base GUI functionnal. Follow up actions need to be add at the end of a game (refer to TODOs)